<resources>
    <string name="app_name">Mini Album</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="Facebook_App_Id">809668685902737</string>
    <string name="share_comment">From a useful application developed by dunarctic and khanhhuynh</string>

    <string name="general">General</string>
    <string name="others">Others</string>

    <string name="pref_security">Security</string>
    <string name="pref_set_password">Set up a password to protect your gallery</string>
    <string name="pref_reset_password">Reset password</string>
    <string name="type_password">Insert password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="apply">APPLY</string>
    <string name="confirm">CONFIRM</string>
    <string name="enter_password">Enter password to continue</string>
    <string name="cancel">CANCEL</string>

    <string name="enter_name">Enter new filename</string>

    <string name="security_delete">Secure delete option</string>
    <string name="security_open">Secure open application</string>

    <string name="pref_others">Others</string>
    <string name="action_info">Info</string>
    <string name="please_wait">Please wait. This may take a while...</string>
</resources>
